src/test/resources/valid_programs/incr_decr__postfix_int_expr_evaluation.notc
// Expressions should evaluate to previous values

void main() {
    int i, j;

    i = 22;
    j = i++;
    printInt(j);

    i = 0;
    j = i--;
    printInt(j);

    i = 4;
    j = 6;
    printInt(i++ + j++);
    printInt(i-- + j--);
    printInt(i++ - j--);
}
