src/test/resources/semantic_errors/undecl_var_in_assignment.notc
void main() {
    int x = 4;
    int z = x + y;
}
